Revert "added new jacoco plugin"